--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=Mydb@123
 spring.jpa.hibernate.ddl-auto=create-drop
 
+
 server.port=8082
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.application.name= inventory_service
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+spring.application.name= inventory-service
